--- a/src/template.html
+++ b/src/template.html
@@ -7,14 +7,14 @@
 
         %sapper.base%
 
-        <link rel="stylesheet" href="global.css" />
         <link
             rel="manifest"
             href="manifest.json"
             crossorigin="use-credentials"
         />
         <link rel="icon" type="image/png" href="favicon.png" />
-        <link ref="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 
         <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
@@ -25,7 +25,7 @@
 	     the current page has one -->
         %sapper.head%
     </head>
-    <body>
+    <body class="font-sans">
         <!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
         <div id="sapper">%sapper.html%</div>
