improvement(nav): prefetch nav links

--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,7 @@
 	     because `src/client.js` references it -->
         <div
             id="sapper"
-            class="min-h-screen flex flex-col px-4 sm:px-6 md:px-10 lg:px-16"
+            class="flex flex-col min-h-screen px-4 sm:px-6 md:px-10 lg:px-16"
         >
             %sapper.html%
         </div>
