--- a/src/template.html
+++ b/src/template.html
@@ -15,6 +15,10 @@
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Geo&display=swap&text=Devessier"
+        />
 
         <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
