--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <meta name="theme-color" content="#333333" />
+        <meta name="theme-color" content="#F56565" />
 
         %sapper.base%
 
