improvement: use my new logo

--- a/src/template.html
+++ b/src/template.html
@@ -12,12 +12,28 @@
             href="manifest.json"
             crossorigin="use-credentials"
         />
-        <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link
+            href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap"
             rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Geo&display=swap&text=Devessier"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/img/apple-touch-icon.png?v=1"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/img/favicon-32x32.png?v=1"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/img/favicon-16x16.png?v=1"
         />
 
         <!-- Sapper generates a <style> tag containing critical CSS
