--- a/src/template.html
+++ b/src/template.html
@@ -21,19 +21,19 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="apple-touch-icon.png?v=1"
+            href="apple-touch-icon.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="favicon-32x32.png?v=1"
+            href="favicon-32x32.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="favicon-16x16.png?v=1"
+            href="favicon-16x16.png"
         />
 
         <!-- Sapper generates a <style> tag containing critical CSS
