perf: preconnect fonts origins

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,9 @@
             crossorigin="use-credentials"
         />
         <link rel="stylesheet" href="index.css" />
+        <link rel="preconnect" href="https://rsms.me/" crossorigin />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap"
             rel="stylesheet"
