fix: add a compatibility fallback
Some browers, such as Firefox or Safari, don't support yes
stylesheets preloading.
This trick permits to use preloading feature on browser supporting
it and to load stylesheets normally for others.

--- a/src/template.html
+++ b/src/template.html
@@ -12,21 +12,24 @@
             href="manifest.json"
             crossorigin="use-credentials"
         />
+
         <link rel="stylesheet" href="index.css" />
+
         <link rel="preconnect" href="https://rsms.me/" crossorigin />
-        <link
-            rel="preload"
-            as="style"
-            href="https://rsms.me/inter/inter.css"
-            onload="this.onload=null;this.rel='stylesheet'"
-        />
+        <link rel="preload" as="style" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
         <link
             rel="preload"
             as="style"
             href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap"
-            onload="this.onload=null;this.rel='stylesheet'"
         />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap"
+        />
+
         <link
             rel="apple-touch-icon"
             sizes="180x180"
