--- a/src/template.html
+++ b/src/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html prefix="og: http://ogp.me/ns#" lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -52,6 +52,32 @@
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
         %sapper.styles%
+
+        <!-- Facebook SEO meta tags -->
+        <meta name="og:site_name" content="baptiste.devessier.fr" />
+        <meta name="og:type" content="website" />
+        <meta
+            name="og:image"
+            content="https://baptiste.devessier.fr/og-logo.jpg"
+        />
+        <meta
+            property="og:image:secure_url"
+            content="https://baptiste.devessier.fr/og-logo.jpg"
+        />
+        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta
+            property="og:image:alt"
+            content="Logo du portfolio de Baptiste Devessier"
+        />
+        <!-- Twitter SEO meta tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:creator" content="@BDevessier" />
+        <meta
+            name="twitter:image"
+            content="https://baptiste.devessier.fr/twitter-logo.jpg"
+        />
 
         <!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
