fix: fix misspelling of OpenGraph meta tags

--- a/src/template.html
+++ b/src/template.html
@@ -54,10 +54,10 @@
         %sapper.styles%
 
         <!-- Facebook SEO meta tags -->
-        <meta name="og:site_name" content="baptiste.devessier.fr" />
-        <meta name="og:type" content="website" />
+        <meta property="og:site_name" content="baptiste.devessier.fr" />
+        <meta property="og:type" content="website" />
         <meta
-            name="og:image"
+            property="og:image"
             content="https://baptiste.devessier.fr/og-logo.jpg"
         />
         <meta
