feat: add plausible analytics

--- a/src/template.html
+++ b/src/template.html
@@ -82,6 +82,13 @@
         <!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
         %sapper.head%
+
+        <script
+            async
+            defer
+            data-domain="baptiste.devessier.fr"
+            src="https://plausible.io/js/plausible.js"
+        ></script>
     </head>
     <body class="font-sans">
         <!-- The application will be rendered inside this element,
