--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+		<link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
+
 		<link rel="preconnect" href="https://rsms.me/" crossorigin />
 		<link rel="preload" as="style" href="https://rsms.me/inter/inter.css" />
 		<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
@@ -20,7 +22,28 @@
 			href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap"
 		/>
 
+		<!-- Facebook SEO meta tags -->
+		<meta property="og:site_name" content="baptiste.devessier.fr" />
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="https://baptiste.devessier.fr/og-logo.jpg" />
+		<meta property="og:image:secure_url" content="https://baptiste.devessier.fr/og-logo.jpg" />
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:image:alt" content="Logo du portfolio de Baptiste Devessier" />
+		<!-- Twitter SEO meta tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:creator" content="@BDevessier" />
+		<meta name="twitter:image" content="https://baptiste.devessier.fr/twitter-logo.jpg" />
+
 		%svelte.head%
+
+		<script
+			async
+			defer
+			data-domain="baptiste.devessier.fr"
+			src="https://plausible.io/js/plausible.js"
+		></script>
 	</head>
 	<body class="font-sans">
 		<div id="svelte" class="flex flex-col min-h-screen px-4 sm:px-6 md:px-10 lg:px-16">
