--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
+		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
 
 		<link rel="preconnect" href="https://rsms.me/" crossorigin />
 		<link rel="preload" as="style" href="https://rsms.me/inter/inter.css" />
