--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+		<meta name="theme-color" content="#F56565" />
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
 
 		<link rel="preconnect" href="https://rsms.me/" crossorigin />
