--- a/src/app.html
+++ b/src/app.html
@@ -51,7 +51,10 @@
 		></script>
 	</head>
 	<body class="font-sans">
-		<div id="svelte" class="flex flex-col min-h-screen px-4 sm:px-6 md:px-10 lg:px-16">
+		<div
+			id="svelte"
+			class="flex flex-col min-h-screen px-4 sm:px-6 md:px-10 lg:px-16 max-w-7xl mx-auto"
+		>
 			%svelte.body%
 		</div>
 	</body>
