--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="alternate" type="application/rss+xml" href="/feed.xml" />
+		<link rel="alternate" type="application/atom+xml" href="/feed.xml" />
 
 		<meta name="theme-color" content="#F56565" />
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
