feat: write article about rss feed generation with sveltekit

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,9 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+		<!-- @@@SNIPSTART blog-feed-xml-alternate -->
 		<link rel="alternate" type="application/atom+xml" href="/feed.xml" />
+		<!-- @@@SNIPEND -->
 
 		<meta name="theme-color" content="#F56565" />
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
