--- a/src/app.html
+++ b/src/app.html
@@ -27,9 +27,9 @@
 			href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap"
 		/>
 
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
 		<!-- Facebook SEO meta tags -->
 		<meta property="og:site_name" content="baptiste.devessier.fr" />
