--- a/src/app.html
+++ b/src/app.html
@@ -55,7 +55,7 @@
 		></script>
 	</head>
 	<body class="font-sans">
-		<div id="svelte" class="flex flex-col min-h-screen px-4 sm:px-6 lg:px-16 max-w-7xl mx-auto">
+		<div id="svelte" class="flex flex-col min-h-screen px-6 lg:px-16 max-w-7xl mx-auto">
 			%svelte.body%
 		</div>
 	</body>
