--- a/src/app.html
+++ b/src/app.html
@@ -39,7 +39,7 @@
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
-		<meta property="og:image:alt" content="Logo du portfolio de Baptiste Devessier" />
+		<meta property="og:image:alt" content="Logo of Baptiste Devessier's portfolio" />
 		<!-- Twitter SEO meta tags -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:creator" content="@BDevessier" />
