feat: activate links prefetching globally

--- a/src/app.html
+++ b/src/app.html
@@ -54,7 +54,7 @@
 			src="https://plausible.io/js/plausible.js"
 		></script>
 	</head>
-	<body class="font-sans">
+	<body data-sveltekit-prefetch class="font-sans">
 		<div id="sveltekit" class="flex flex-col min-h-screen px-6 lg:px-16 max-w-7xl mx-auto">
 			%sveltekit.body%
 		</div>
