refactor: move classes to layout used for portfolio pages from app.html

--- a/src/app.html
+++ b/src/app.html
@@ -55,8 +55,6 @@
 		></script>
 	</head>
 	<body data-sveltekit-prefetch class="font-sans">
-		<div id="sveltekit" class="flex flex-col min-h-screen px-6 lg:px-16 max-w-7xl mx-auto">
-			%sveltekit.body%
-		</div>
+		<div id="sveltekit">%sveltekit.body%</div>
 	</body>
 </html>
