fix: make youtube player work constantly

--- a/src/app.html
+++ b/src/app.html
@@ -45,6 +45,8 @@
 		<meta name="twitter:creator" content="@BDevessier" />
 		<meta name="twitter:image" content="https://baptiste.devessier.fr/twitter-logo.jpg" />
 
+		<link rel="stylesheet" href="/lite-youtube-embed/styles.css" />
+
 		%sveltekit.head%
 
 		<script
@@ -56,5 +58,7 @@
 	</head>
 	<body data-sveltekit-prefetch class="font-sans">
 		<div id="sveltekit">%sveltekit.body%</div>
+
+		<script src="/lite-youtube-embed/script.js"></script>
 	</body>
 </html>
